--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "https://github.com/esayler/game-time"
   },
-  "author": "Eric Sayler",
+  "author": "Justin Wood and Eric Sayler",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/esayler/game-time/issues"
