--- a/package.json
+++ b/package.json
@@ -45,6 +45,12 @@
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.3"
   }
