--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,8 +29,8 @@ jobs:
         uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-      - run: npm install
+          node-version: 14
+      - run: npm ci
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Build with Jekyll
