--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 12
-      - run: npm ci
+      - run: npm install
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Build with Jekyll
