--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,11 +27,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
       - uses: actions/setup-node@v3
         with:
           node-version: 12
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
+      - run: npm run build
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
