--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Eric and Justin's Game Time project.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --watch -d",
+    "start": "NODE_ENV=development webpack-dev-server --watch -d",
     "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js",
     "build": "./node_modules/webpack/bin/webpack.js",
     "test": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register"
